# astri.bak

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json  config.json
.clangd/index/: App.hpp.7C7BEF6C8D6801AB.idx  CLI.hpp.B429060070DC9F2E.idx  Config.hpp.938EC06277869F68.idx  ConfigFwd.hpp.296B5F17E519DBF5.idx  Error.hpp.160C65A35D692EFF.idx  Formatter.hpp.83EE292686771409.idx  FormatterFwd.hpp.AF3BDFD98328FEDF.idx  Macros.hpp.B7E955A5FC9EAD04.idx  Option.hpp.AA4237F5E095E1AB.idx  Split.hpp.D81AD95376AE6A89.idx  StringTools.hpp.902F3D6246254323.idx  TypeTools.hpp.DCEDDF9F4681B631.idx  Validators.hpp.10E8AC4A7B507F8C.idx  Version.hpp.13E268C4D8B5B73D.idx  _fixes.hpp.0E302583AD0AA467.idx  _vectorize.hpp.5F0F99D0711D323F.idx  algorithmfwd.h.A3875BC5DC4FC0C8.idx  aligned_buffer.h.96614475439CD84E.idx  alloc_traits.h.0E1DC2B1B26589EA.idx  alloc_traits.h.2F89D42568C5A303.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.30133D864C2E8DF6.idx  allocator.h.26EAA5320DABF70A.idx  altsvc.c.20E6C56366A23946.idx  altsvc.h.6717380A2B224277.idx  amigaos.c.95940F92D5D934E1.idx  amigaos.h.42ED2127BFC501CB.idx  ansicolor_sink-inl.h.66A6C53867E8F7EA.idx  ansicolor_sink.h.0B622F72CEE1BEDB.idx  arpa_telnet.h.7C66A47513CBF425.idx  array.0404C0B588B7DAB6.idx  asn1.h.C7D3E935DC27FAE0.idx  asn1err.h.3A1DD7649FAD559E.idx  astri.cpp.B49F68FBA8252273.idx  asyn-ares.c.57925CD9EF329AFB.idx  asyn-thread.c.2184FB7D96194DAE.idx  asyn.h.932D5A21A8FC3A88.idx  async.cpp.E14A54FE8534B8AB.idx  async.h.54CECE6DF9C16F27.idx  async.h.E7D098F135287CA7.idx  (+1027 more)
analysis/color/: color.py
data/: 1999-025.txt  2012-044.txt  active.txt  analyst.txt  argos.txt  beidou.txt  cosmos-2251-debris.txt  dmc.txt  education.txt  engineering.txt  galileo.txt  geo.txt  geodetic.txt  glo-ops.txt  globalstar.txt  goes.txt  gorizont.txt  intelsat.txt  iridium-33-debris.txt  iridium-NEXT.txt  iridium.txt  military.txt  molniya.txt  musson.txt  nnss.txt  noaa.txt  orbcomm.txt  other-comm.txt  other.txt  planet.txt  radar.txt  raduga.txt  resource.txt  sarsat.txt  satnogs.txt  sbas.txt  science.txt  ses.txt  spire.txt  stations.txt  (+5 more)
resources/: fragment.glsl  vertex.glsl
shaders/: fs.glsl  vs.glsl
src/: astri.cpp  colors.cpp  colors.hpp  data.cpp  data.hpp  gl.h  glad.c  glad.h  globals.cpp  globals.hpp  icosasphere.cpp  icosasphere.hpp  input.cpp  input.hpp  log.cpp  log.hpp  logger.hpp  main.c  main.cpp  object.cpp  object.hpp  shader.cpp  shader.hpp  ui.cpp  ui.hpp  url.cpp  url.hpp
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
str3/cpp/: sgp4io.cpp  sgp4io.h  testcpp.cpp
